--- a/SmartSpendExpense/src/main/resources/application.properties
+++ b/SmartSpendExpense/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=SmartSpendExpense
 
-server.port=8081
-
-spring.datasource.url=jdbc:mysql://localhost:3306/expensetracker
+spring.datasource.url=jdbc:mysql://localhost:3306/expensetracker?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootsmart
 
-
+server.port=8081
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -15,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 logging.level.org.springframework.security.config.annotation.authentication.configuration=ERROR
-
+logging.level.com.example.SmartSpendExpense=DEBUG
 
 
 
